--- a/style.css
+++ b/style.css
@@ -702,3 +702,6 @@ img {
 /* Make it obvious images are zoomable */
 img.zoomable { cursor: zoom-in; }
 html { scroll-behavior: smooth; }
+#projects, #about, #contact {
+  scroll-margin-top: 90px;
+}
